@@ -106,4 +106,6 @@ void PlayerCmd_GetSteamGroupMembership(scr_entref_t arg);
 void Scr_PrecacheString_f();
 void Scr_Destroy_f(scr_entref_t hud_elem_num);
 
+void Scr_IsArray_f();
+
 #endif
