@@ -42,3 +42,6 @@ After a 2 years its still good to write about changes in server code ^^
 
 September 13 2016:
  + Added 'Scr_AddArrayKey' script and plugin function. It allows you to create script arrays with string keys instead of numeric. Just make sure you passed value returned from 'Scr_AllocString' (call this one on initialization).
+
+September 14 2016:
+ + Added 'isArray' script function. (http://zeroy.com/script/variables/isarray.htm)
